2002-12-05  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03524] fix doc*/README.func, w3mhelp.cgi.in
	* doc/README.func (REINIT): added
	* doc-jp/README.func (REINIT): added
	* scripts/w3mhelp.cgi.in (Page/Cursor motion): 
				add moveR1 movL1 movD1 movU1 ldown1 lup1
		(File/Stream operation): add pipeBuf
		(Miscellany): add dispVer execCmd reinit
		(load_keymap): rewrite
		(norm_key): rewrite
	
2002-12-05  Fumitoshi UKAI  <ukai@debian.or.jp>

	* NEWS: rc: display_ins_del

2002-12-05  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03523] Re: del/ins
	* file.c (HTMLtagproc1): check displayInsDel, RB_DEL
	* fm.h (RB_DEL): added
		(displayInsDel): added
	* rc.c (CMT_DISP_INS_DEL): added
		(display_ins_del): added
	* table.c (feed_table_tag): check displayInsDel, TBLM_DEL
	* table.h (TBLM_DEL): added
		(TBLM_ANCHOR): renum
		(struct table_mode): unsigned int pre_mode

2002-12-05  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03522] newline around <pre>..</pre>
	* file.c (HTMLtagproc1): break before <pre>/after </pre> if necessary

2002-12-05  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03521] sync option
	* display.c (redrawNLine): calcTabPos()
	* func.c (initKeymap): return if keymap_initialized
	* main.c (calcTabPos): no more static
		(main): move sync_with_option, initCookie, setLocalCookie
			move backend
			move initKeymap, initMouseAction, initMenu
			remove calcTabPos
			add displayBuffer
		(numTab): static
		(deleteTab): delete calcTabPos
		(moveTab): delete calcTabPos
	* proto.h (calcTabPos): added
		
2002-12-05  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev-en 00841] Re: w3m segfaults if the terminal is not writable
	* terms.c (reset_tty): don't close stderr

2002-12-04  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03516] Re: 2 stroke keybinding
	* func.c (keymap_initialized): initialized to FALSE
		(setKeymap): push KeyData

2002-12-04  Fumitoshi UKAI  <ukai@debian.or.jp>
