@@ -1,5 +1,10 @@
 2002-12-05  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03525] Re: sync option
+	* func.c (initKeymap): delete check force, keymap_initialized
+
+2002-12-05  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03524] fix doc*/README.func, w3mhelp.cgi.in
 	* doc/README.func (REINIT): added
 	* doc-jp/README.func (REINIT): added
@@ -5449,4 +5454,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.588 2002/12/04 17:08:26 ukai Exp $
+$Id: ChangeLog,v 1.589 2002/12/04 17:15:35 ukai Exp $
